--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -7,6 +7,13 @@ ARG LIDARR_RELEASE
 LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
 LABEL maintainer="thelamer"
 
+#CIFS for mounting windows shared
+RUN \
+	echo '**** install cifs ****' && \
+	apt-get update && \
+	apt-get install -y \
+		cifs-utils
+		
 # environment settings
 ARG DEBIAN_FRONTEND="noninteractive"
 ARG LIDARR_BRANCH="master"
@@ -40,6 +47,9 @@ RUN \
 
 # copy local files
 COPY root/ /
+
+# add mount configuration files, if any
+COPY /mount-config /mount-config/
 
 # ports and volumes
 EXPOSE 8686
